--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 										SQL Data Queries</a></h2>
 									</header>
 									<a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/NashvilleHousingQueries.sql" class="image fit"><img src="images/DataCleaning.jpg" alt="" /></a>
-									<p>Data cleaning study using constructed SQL statements in SQL Server Management Studio.  Standardizes and parses fields in raw dataset.</p>
+									<p>Data cleaning study using constructed SQL statements in SQL Server Management Studio.  Standardizes data and parses fields in raw dataset.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/NashvilleHousingQueries.sql" class="button">View Project</a></li>
 									</ul>
