--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 										<h2><a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/CarSalesStudy.xlsx">Excel Study -<br />
 										Auto Sales Data</a></h2>
 									</header>
-									<a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/CarSalesStudy.xlsx" class="image fit"><img src="images/Excel.jpg" alt="" /></a>
+									<a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/CarSalesStudy.xlsx" class="image fit"><img src="images/Autos.jpg" alt="" /></a>
 									<p>Excel study of historical automobile sales dataset for dates in 2018-2019.  Includes cleaned data table and several pivot table visualizations.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/CarSalesStudy.xlsx" class="button">View Project</a></li>
@@ -112,10 +112,10 @@
 								<article>
 									<header>
 										<h2><a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/NashvilleHousingQueries.sql">Data Cleaning Study -<br />
-										SQL Data Queries</a></h2>
+										Nashville Housing Data</a></h2>
 									</header>
-									<a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/NashvilleHousingQueries.sql" class="image fit"><img src="images/DataCleaning.jpg" alt="" /></a>
-									<p>Data cleaning study using constructed SQL statements in SQL Server Management Studio.  Standardizes data and parses fields in raw dataset.</p>
+									<a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/NashvilleHousingQueries.sql" class="image fit"><img src="images/Housing.jpg" alt="" /></a>
+									<p>Data cleaning study of Nashville housing dataset in SQL Server Management Studio.  Standardizes data and parses fields in raw dataset.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/NashvilleHousingQueries.sql" class="button">View Project</a></li>
 									</ul>
