--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/RegressionNotes.pdf">Correlation Notes -<br />
+										Single Linear Regression</a></h2>
+									</header>
+									<a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/RegressionNotes.pdf" class="image fit"><img src="images/Regplot.jpg" alt="" /></a>
+									<p>Technical documentation example of a single linear regression study using Python.  Examines correlation between height and weight of middle school students.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/MarkNiebuhr/PortfolioProjects/blob/main/RegressionNotes.pdf" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://public.tableau.com/app/profile/mark.niebuhr/viz/CovidDashboard_16747426466240/Dashboard1">Covid Study Part 2 -<br />
 										Tableau Visualizations</a></h2>
 									</header>
